[package]
name = "console_stuff"
version = "0.1.0"
edition = "2024"
description = "convenient re-exporting of console crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stewthestew/console_stuff"
keywords = ["cli", "console", "terminal"]
categories = ["command-line-interface"]

[dependencies]
clap = "4.5.40"
console = "0.15.11"
dialoguer = "0.11.0"
indicatif = "0.17.11"
